// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IncomeField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          name="income"
          placeholder="Dochód"
          type="text"
          value="1234567890a"
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        Podana kwota jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<IncomeField/> matches snapshot 1`] = `
<input
  class="sc-crzoUp kUQhja"
  id="testId"
  name="income"
  placeholder="Dochód"
  type="text"
  value=""
/>
`;

exports[`<IncomeField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="income"
      >
        Income*
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          label="Income"
          name="income"
          placeholder="Dochód*"
          required=""
          type="text"
          value=""
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<IncomeField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="income"
      >
        Income
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp kUQhja"
          id="testId"
          label="Income"
          name="income"
          placeholder="Dochód"
          type="text"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
